# tubescience-fb-ads-insights

./: .gitignore  main.py  pyproject.toml  requirements.txt  tasks.py
.github/workflows/: main.yaml
controller/: bigquery.py  facebook.py  handler.py  pipelines.py  tasks.py
libs/: bigquery.py  facebook.py
models/: AdsInsights.py  VideoAdsInsights.py  VideoInsights.py  models.py
models/AdsInsights/: AdsInsights.py  AgeGenderInsights.py  DeviceInsights.py  PlatformPositionInsights.py  RegionInsights.py  VideoInsights.py  base.py
models2/: VideoInsights.py  models.py
secret_manager/: doppler.py
test/: test_units.py
